Add link to issue tracker

--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
                 <small>*All data is processed in the browser. Nothing is transmitted over the web.
                     <br> It's just that the browser will "download" the result.</small>
             </div>
-            <div style="margin-top: 1rem; margin-bottom: 1rem;" class="text-center">
+            <div style="margin-top: 1rem;" class="text-center">
                 <button class="btn btn-danger" onclick="clearList();">Clear</button>
+            </div>
+            </div>
+            <div style="margin-top: 1rem; margin-bottom: 1rem;" class="text-center">
+                <small><a href="https://github.com/HSZemi/aoe2map/issues">We have bugs, many bugs!</a></small>
             </div>
         </div>
     </div>
