--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
         body {
             padding-top: 1rem;
         }
+
+        #fileInput {
+            display: none;
+        }
+
+        label {
+            display: inline;
+        }
+
+        .map {
+            margin-bottom: .5rem;
+        }
     </style>
 </head>
 
@@ -26,17 +38,22 @@
     <div class="container">
         <div class="col-md-6 offset-md-3">
             <h1>Create a map pack</h1>
-            <div class="dropzone">
-                <div class="card" id="target">
-                    <div class="card-body" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);" ondragleave="dragLeaveHandler(event);"
+            <label for="fileInput">
+                <div class="dropzone">
+                    <div class="card" id="target" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);" ondragleave="dragLeaveHandler(event);"
                         style="min-height: 20rem;">
-                        <div id="filelist"></div>
-                        <div class="text-center">Drag .rms map files here!
-                            <br>When the border turns white, drop the file(s)
-                            <br> <small>(maybe you have to wiggle your mouse a bit)</small></div>
+                        <div class="card-header">
+                            <div class="text-center">Click here or drag .rms map files here!
+                                <br>When the border turns white, drop the file(s)
+                                <br>
+                                <small>(maybe you have to wiggle your mouse a bit)</small>
+                            </div>
+                        </div>
+                        <ul id="filelist" class="list-group list-group-flush"></ul>
                     </div>
                 </div>
-            </div>
+            </label>
+            <input type="file" id="fileInput" onchange="handleFiles(this.files);" multiple>
             <div style="margin-top: 1rem;" class="text-center">
                 <button class="btn btn-primary btn-block" onclick="getdata();">Generate and download* map pack</button>
             </div>
@@ -47,11 +64,13 @@
             <div style="margin-top: 1rem;" class="text-center">
                 <button class="btn btn-danger" onclick="clearList();">Clear</button>
             </div>
-            </div>
-            <div style="margin-top: 1rem; margin-bottom: 1rem;" class="text-center">
-                <small><a href="https://github.com/HSZemi/aoe2map/issues">We have bugs, many bugs!</a></small>
-            </div>
         </div>
+        <div style="margin-top: 1rem; margin-bottom: 1rem;" class="text-center">
+            <small>
+                <a href="https://github.com/HSZemi/aoe2map/issues">We have bugs, many bugs!</a>
+            </small>
+        </div>
+    </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -72,28 +91,28 @@
         }, false);
 
         function dropHandler(ev) {
-            // Prevent default behavior (Prevent file from being opened)
             ev.preventDefault();
 
             if (ev.dataTransfer.items) {
-                // Use DataTransferItemList interface to access the file(s)
                 for (var i = 0; i < ev.dataTransfer.items.length; i++) {
-                    // If dropped items aren't files, reject them
                     if (ev.dataTransfer.items[i].kind === 'file') {
                         var file = ev.dataTransfer.items[i].getAsFile();
                         handleRmsFile(file);
                     }
                 }
             } else {
-                // Use DataTransfer interface to access the file(s)
                 for (var i = 0; i < ev.dataTransfer.files.length; i++) {
                     let file = ev.dataTransfer.files[i];
                     handleRmsFile(file);
                 }
             }
-
-            // Pass event to removeDragData for cleanup
             removeDragData(ev)
+        }
+
+        function handleFiles(filelist) {
+            for (let file of filelist) {
+                handleRmsFile(file);
+            }
         }
 
         function handleRmsFile(file) {
@@ -101,31 +120,55 @@
                 let reader = new FileReader();
                 reader.onload = function (e) {
                     let contents = e.target.result;
-                    $('<div class="btn btn-secondary btn-block databutton">' + file.name + '</div>').appendTo('#filelist').data('map', contents);
+                    let warnings = [];
+                    restructureMap(contents, "", [], warnings);
+                    console.log(warnings);
+                    let clazz = 'success';
+                    let text = 'Looks good!';
+                    if (warnings.length > 0) {
+                        clazz = 'warning';
+                        text = "This map might not be suitable for usage in a map pack and break the map pack you are about to create. Problems: \
+                        <ul><li>" + warnings.join("</li>\n<li>") + "</li></ul>";
+                    }
+                    $('<li class="list-group-item map">\
+                        <h5 class="mapname">'+ file.name + '</h5>\
+                        <p class="text-' + clazz + '">' + text + '</p>\
+                    </li>').appendTo('#filelist').data('map', contents);
                 }
                 reader.readAsText(file);
             } else {
-                alert(file.name + " is not a .rms file");
+                $('#filelist').append('<li class="list-group-item">' + file.name + " is not a .rms file</li>");
             }
         }
 
         function getdata() {
-            let allButtons = $('.databutton');
-            wholedata = 'start_random\n';
+            let allButtons = $('.map');
+            let startData = 'start_random\n';
             let chances = getChances(allButtons.length);
             for (let i = 0; i < allButtons.length; i++) {
-                wholedata += "percent_chance " + chances[i] + " #define " + marker(i) + "\n"
+                let prefix = "M" + i + "_";
+                startData += "percent_chance " + chances[i] + " #define " + marker(prefix, $(allButtons.get(i)).find('.mapname').text()) + "\n"
             }
-            wholedata += 'end_random\n';
+            startData += 'end_random\n';
+
+
+            let constLines = [];
+
+            let mapsData = "";
+
             allButtons.each(function (i, it) {
                 let ifVariant = "elseif";
                 if (i == 0) {
                     ifVariant = "if";
                 }
-                wholedata += "\n\n" + ifVariant + " " + marker(i) + "\n\n" + $(it).data('map');
+                let prefix = "M" + i + "_";
+                mapsData += "\n\n" + ifVariant + " " + marker(prefix, $(it).find('.mapname').text()) + "\n\n" + restructureMap($(it).data('map'), prefix, constLines, []);
             });
-            wholedata += "\n\nendif";
-            download("mappack.rms", wholedata);
+            mapsData += "\n\nendif";
+
+            let wholeData = startData + "\n" + constLines.join("\n") + "\n" + mapsData;
+
+            download("mappack.rms", wholeData);
         }
 
         function getChances(amount) {
@@ -140,12 +183,141 @@
             return a;
         }
 
-        function marker(amount) {
-            let m = "MAPPACK_MARKER_X";
-            for (let i = 0; i < amount; i++) {
-                m += "X";
-            }
+        function marker(prefix, name) {
+            let m = prefix + normalizeConstant(name);
             return m;
+        }
+
+        function normalizeConstant(name) {
+            name = name.substr(0, name.length - 4);
+            name = name.toUpperCase();
+            name = name.replace(/\s+/g, "_");
+            name = name.replace(/[^A-Z0-9_]/g, "X");
+            return name;
+        }
+
+        function normalizeMap(mapcontent, prefix) {
+            mapcontent = mapcontent.replace(/#include_drs\s+random_map.def/g, "#include_drsrandom_mapdef");
+            mapcontent = mapcontent.replace(/\n/g, " ");
+            mapcontent = mapcontent.replace(/\/\*.*?\*\//g, "");
+            mapcontent = mapcontent.replace(/\s+/g, " ");
+            mapcontent = mapcontent.replace(/\s([a-z_]+)/g, "\n$1");
+            mapcontent = mapcontent.replace(/</g, "\n<");
+            mapcontent = mapcontent.replace(/#/g, "\n#");
+            mapcontent = mapcontent.replace(/\{/g, "\n{");
+            mapcontent = mapcontent.replace(/\}/g, "\n}\n");
+            mapcontent = mapcontent.replace(/ \n/g, "\n");
+            mapcontent = mapcontent.replace(/#include_drsrandom_mapdef/g, "#include_drs random_map.def");
+            mapcontent = mapcontent.replace(/#const /g, "#const " + prefix);
+            return mapcontent;
+        }
+
+        function collectDeclaredConsts(lines) {
+            let consts = new Map();
+            for (let line of lines) {
+                let matchArray = line.match(/#const ([A-Z_][A-Z0-9_]*)/);
+                console.log(line);
+                console.log(matchArray);
+                if (matchArray != null) {
+                    console.log(matchArray);
+                    let key = matchArray[1];
+                    if (!consts.has(key)) {
+                        consts.set(key, []);
+                    }
+                    consts.get(key).push(line);
+                }
+            }
+            return consts;
+        }
+
+        function restructureMap(mapcontent, prefix, constLines, warnings) {
+            mapcontent = normalizeMap(mapcontent, prefix);
+
+            let lines = mapcontent.split("\n");
+
+            let declaredConsts = collectDeclaredConsts(lines);
+
+            console.log(declaredConsts);
+
+            for (let key of declaredConsts.keys()) {
+                let values = declaredConsts.get(key);
+                if (values.length > 1) {
+                    let expected = values[0];
+                    for (let value of values) {
+                        if (value !== expected) {
+                            warnings.push("constant " + key + " is declared twice: '" + value + "' vs. '" + expected + "'");
+                        }
+                    }
+                }
+            }
+
+
+            let mapLines = [];
+            let indent = 0;
+            let lineNr = 0;
+            for (let line of lines) {
+                lineNr++;
+                if (line.startsWith("#const")) {
+                    constLines.push(line);
+                } else {
+                    let indentBefore = getIndentBefore(line);
+                    let indentAfter = getIndentAfter(line);
+                    mapLines.push(getIndent(indent + indentBefore) + line);
+                    indent += indentAfter;
+                }
+            }
+
+            return mapLines.join("\n");
+        }
+
+        function addWarning(message) {
+            console.log(message);
+        }
+
+        function getIndentBefore(line) {
+            if (line.startsWith("elseif")) {
+                return -1;
+            }
+            if (line.startsWith("else")) {
+                return -1;
+            }
+            if (line.startsWith("endif")) {
+                return -1;
+            }
+            if (line.startsWith("end_random")) {
+                return -1;
+            }
+            if (line.startsWith("}")) {
+                return -1;
+            }
+            return 0;
+        }
+
+        function getIndentAfter(line) {
+            if (line.startsWith("if")) {
+                return 1;
+            }
+            if (line.startsWith("endif")) {
+                return -1;
+            }
+            if (line.startsWith("{")) {
+                return 1;
+            }
+            if (line.startsWith("}")) {
+                return -1;
+            }
+            if (line.startsWith("start_random")) {
+                return 1;
+            }
+            if (line.startsWith("end_random")) {
+                return -1;
+            }
+            return 0;
+        }
+
+        function getIndent(i) {
+            //if (i < 0) { return "XXXXXX"; }
+            return " ".repeat(Math.max(i * 4, 0));
         }
 
         function dragOverHandler(event) {
