Introduce the possibility to express affection towards a map

--- a/mapsapp/tests/snapshots/validation/test_latest_rms_.html
+++ b/mapsapp/tests/snapshots/validation/test_latest_rms_.html
@@ -23,7 +23,8 @@
                 "version-name"
             ],
             "collections": [],
-            "images": []
+            "images": [],
+            "votes": 0
         },
         {
             "uuid": "[map-name-1_UUID]",
@@ -48,7 +49,8 @@
                 "version-name"
             ],
             "collections": [],
-            "images": []
+            "images": [],
+            "votes": 0
         },
         {
             "uuid": "[map-name-0_UUID]",
@@ -73,7 +75,8 @@
                 "version-name"
             ],
             "collections": [],
-            "images": []
+            "images": [],
+            "votes": 0
         }
     ]
 }
