Change map url format
Use shorter ID and slug instead of UUID

--- a/mapsapp/tests/snapshots/validation/test_latest_rms_.html
+++ b/mapsapp/tests/snapshots/validation/test_latest_rms_.html
@@ -6,7 +6,7 @@
             "version": "",
             "authors": "rms-authors",
             "description": "rms-description",
-            "pageurl": "/map/[map-name-1_UUID]",
+            "pageurl": "/map/[map-name-1_ID]/map-name-1",
             "newer_version": null,
             "latest_version": null,
             "url": "",
@@ -32,7 +32,7 @@
             "version": "",
             "authors": "rms-authors",
             "description": "rms-description",
-            "pageurl": "/map/[map-name-0_UUID]",
+            "pageurl": "/map/[map-name-0_ID]/map-name-0",
             "newer_version": null,
             "latest_version": null,
             "url": "",
