--- a/mapsapp/tests/snapshots/validation/test_latest_updated_rms_.html
+++ b/mapsapp/tests/snapshots/validation/test_latest_updated_rms_.html
@@ -6,7 +6,7 @@
             "version": "",
             "authors": "rms-authors",
             "description": "rms-description",
-            "pageurl": "/map/[map-name-2_UUID]",
+            "pageurl": "/map/[map-name-2_ID]/map-name-2",
             "newer_version": null,
             "latest_version": null,
             "url": "",
